Fixed commit with PR,, new version ready for citting

--- a/style/dp-grey-theme/index.html
+++ b/style/dp-grey-theme/index.html
@@ -1,1 +1,2 @@
-<html><body style="background-color: #FFFFFF;"></body></html>
+<!DOCTYPE html>
+<html lang="en"><head><title>empty</title></head><body style="background-color: #FFFFFF;"></body></html>
