--- a/style/nord/index.html
+++ b/style/nord/index.html
@@ -1,1 +1,7 @@
-<html><body style="background-color: #FFFFFF;"></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>dotProject</title>
+</head>
+<body style="background-color: #FFFFFF;"></body>
+</html>
